--- a/Lab/session1/practice.ipynb
+++ b/Lab/session1/practice.ipynb
@@ -458,9 +458,315 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b21a3c8",
+   "metadata": {},
+   "source": [
+    "###### 1. Let $\\vec{b}_1 = (2,0)$ and $\\vec{b}_2 = (0,3)$.  \n",
+    "######    - Construct the change of basis matrix.  \n",
+    "######    - Express $\\vec{v} = (4,6)$ in this new basis.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "138abe28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change of Basis Matrix P:\n",
+      "[[2 0]\n",
+      " [0 3]]\n",
+      "Original vector v: [4 6]\n",
+      "Coordinates of v in the new basis: [2. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b1 = np.array([2, 0])\n",
+    "b2 = np.array([0, 3])\n",
+    "\n",
+    "# Change of basis matrix P\n",
+    "P = np.column_stack((b1, b2))\n",
+    "print(f\"Change of Basis Matrix P:\\n{P}\")\n",
+    "\n",
+    "# new basis coordinates of v\n",
+    "v = np.array([4, 6])\n",
+    "print(f\"Original vector v: {v}\")\n",
+    "\n",
+    "# Solve Pv_new = v to find v_new\n",
+    "v_new = np.linalg.solve(P, v)\n",
+    "print(f\"Coordinates of v in the new basis: {v_new}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5007cd0d",
+   "metadata": {},
+   "source": [
+    "###### 2. In Python, generate two random 2D basis vectors, form $P$, and convert a random vector into the new basis.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "46bea142",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Basis 1: [6 3]\n",
+      "Random Basis 2: [0.85502326 0.34212737]\n",
+      "Change of Basis Matrix P:\n",
+      "[[6.         0.85502326]\n",
+      " [3.         0.34212737]]\n",
+      "Original vector: [0.13445787 0.23931655]\n",
+      "Coordinates of v in the new basis: [ 0.30961891 -2.01544875]\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_basis1 = np.random.randint(0, 10, size=2)\n",
+    "random_basis2 = np.random.rand(2)\n",
+    "print(f\"Random Basis 1: {random_basis1}\")\n",
+    "print(f\"Random Basis 2: {random_basis2}\")\n",
+    "\n",
+    "P = np.column_stack((random_basis1, random_basis2))\n",
+    "print(f\"Change of Basis Matrix P:\\n{P}\")\n",
+    "\n",
+    "new_vector = np.random.rand(2)\n",
+    "print(f\"Original vector: {new_vector}\")\n",
+    "\n",
+    "v_new = np.linalg.solve(P, new_vector)\n",
+    "print(f\"Coordinates of v in the new basis: {v_new}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d2b6bd",
+   "metadata": {},
+   "source": [
+    "###### 1. Create two $3 \\times 3$ matrices in Python and:  \n",
+    "######    - Add them  \n",
+    "######    - Multiply one by a scalar  \n",
+    "######    - Compute their matrix product  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "43701d83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix 1:\n",
+      "[[6 9 9]\n",
+      " [7 2 2]\n",
+      " [5 1 4]]\n",
+      "Matrix 2:\n",
+      "[[1 4 5]\n",
+      " [9 8 9]\n",
+      " [3 9 5]]\n",
+      "\n",
+      "Sum of Matrix 1 and Matrix 2:\n",
+      "[[ 7 13 14]\n",
+      " [16 10 11]\n",
+      " [ 8 10  9]]\n",
+      "\n",
+      "Scalar Multiplication of Matrix 1 by 3:\n",
+      "[[18 27 27]\n",
+      " [21  6  6]\n",
+      " [15  3 12]]\n",
+      "\n",
+      "Matrix Product of Matrix 1 and Matrix 2:\n",
+      "[[114 177 156]\n",
+      " [ 31  62  63]\n",
+      " [ 26  64  54]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix1 = np.random.randint(1, 10, (3, 3))\n",
+    "matrix2 = np.random.randint(1, 10, (3, 3))\n",
+    "print(f\"Matrix 1:\\n{matrix1}\")\n",
+    "print(f\"Matrix 2:\\n{matrix2}\", end=\"\\n\\n\")\n",
+    "\n",
+    "# Addition\n",
+    "matrix_sum = matrix1 + matrix2\n",
+    "print(f\"Sum of Matrix 1 and Matrix 2:\\n{matrix_sum}\", end=\"\\n\\n\")\n",
+    "\n",
+    "# Scalar Multiplication\n",
+    "scalar = 3\n",
+    "matrix_scalar = scalar * matrix1\n",
+    "print(f\"Scalar Multiplication of Matrix 1 by {scalar}:\\n{matrix_scalar}\", end=\"\\n\\n\")\n",
+    "\n",
+    "# Matrix Product\n",
+    "matrix_product = np.dot(matrix1, matrix2)\n",
+    "print(f\"Matrix Product of Matrix 1 and Matrix 2:\\n{matrix_product}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79844d6d",
+   "metadata": {},
+   "source": [
+    "###### 2. Write the $2 \\times 2$ identity matrix and verify $AI = IA = A$.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ed20eff2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:\n",
+      "[[1 3]\n",
+      " [7 9]]\n",
+      "\n",
+      "I (Identity Matrix):\n",
+      "[[1. 0.]\n",
+      " [0. 1.]]\n",
+      "\n",
+      "AI:\n",
+      "[[1. 3.]\n",
+      " [7. 9.]]\n",
+      "\n",
+      "IA:\n",
+      "[[1. 3.]\n",
+      " [7. 9.]]\n",
+      "\n",
+      "The above results show that A is an invertible matrix.\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.random.randint(1, 10, (2, 2))\n",
+    "I = np.eye(2)\n",
+    "print(f\"A:\\n{A}\\n\")\n",
+    "print(f\"I (Identity Matrix):\\n{I}\\n\")\n",
+    "\n",
+    "# Verify AI = IA = A\n",
+    "AI = np.dot(A, I)\n",
+    "IA = np.dot(I, A)\n",
+    "print(f\"AI:\\n{AI}\\n\")\n",
+    "print(f\"IA:\\n{IA}\\n\")\n",
+    "print(\"The above results show that A is an invertible matrix.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68794be7",
+   "metadata": {},
+   "source": [
+    "###### 1. Construct a $3 \\times 3$ symmetric matrix in Python.  \n",
+    "######    - Verify that $A = A^T$.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "8940951a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:\n",
+      "[[8 6 2]\n",
+      " [1 2 5]\n",
+      " [1 7 6]]\n",
+      "\n",
+      "A^T (Transpose of A):\n",
+      "[[8 1 1]\n",
+      " [6 2 7]\n",
+      " [2 5 6]]\n",
+      "\n",
+      "A is not symmetric (A ≠ A^T).\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.random.randint(1, 10, (3, 3))\n",
+    "print(f\"A:\\n{A}\\n\")\n",
+    "\n",
+    "A_T = A.T\n",
+    "print(f\"A^T (Transpose of A):\\n{A_T}\\n\")\n",
+    "\n",
+    "# Verify A = A^T\n",
+    "if np.array_equal(A, A_T):\n",
+    "    print(\"A is symmetric (A = A^T).\")\n",
+    "else:\n",
+    "    print(\"A is not symmetric (A ≠ A^T).\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "753108d7",
+   "metadata": {},
+   "source": [
+    "###### 2. Create a random $3 \\times 3$ matrix and check if it is orthogonal by verifying $A^TA = I$.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "619e4d55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:\n",
+      "[[0.71494591 0.84458771 0.13288277]\n",
+      " [0.46784053 0.47037311 0.10394022]\n",
+      " [0.23852181 0.00549302 0.42424284]]\n",
+      "\n",
+      "A^T A:\n",
+      "[[0.78691508 0.82520434 0.24482261]\n",
+      " [0.82520434 0.93460943 0.16345222]\n",
+      " [0.24482261 0.16345222 0.20844339]]\n",
+      "\n",
+      "A is not an orthogonal matrix (A^T A ≠ I).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Create a random 3x3 matrix\n",
+    "A = np.random.rand(3, 3)\n",
+    "print(f\"A:\\n{A}\\n\")\n",
+    "\n",
+    "# Step 2: Compute its transpose\n",
+    "A_T = A.T\n",
+    "\n",
+    "# Step 3: Compute A^T A\n",
+    "I = np.dot(A_T, A)\n",
+    "print(f\"A^T A:\\n{I}\\n\")\n",
+    "\n",
+    "# Step 4: Compare with Identity\n",
+    "if np.allclose(I, np.eye(3)):\n",
+    "    print(\"A is an orthogonal matrix (A^T A = I).\")\n",
+    "else:\n",
+    "    print(\"A is not an orthogonal matrix (A^T A ≠ I).\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138abe28",
+   "id": "555babf0",
    "metadata": {},
    "outputs": [],
    "source": []
