--- a/Lab/session1/rough.ipynb
+++ b/Lab/session1/rough.ipynb
@@ -144,8 +144,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "af6d194c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coordinates in new basis: [2.5 0.5]\n",
+      "Coordinates in new basis: [2.5 0.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# New basis vectors\n",
+    "b1 = np.array([1, 1])\n",
+    "b2 = np.array([-1, 1])\n",
+    "\n",
+    "# Change of basis matrix\n",
+    "P = np.column_stack((b1, b2))\n",
+    "\n",
+    "# Vector in standard basis\n",
+    "v = np.array([2, 3])\n",
+    "\n",
+    "# Coordinates in new basis\n",
+    "v_new = np.linalg.inv(P) @ v\n",
+    "print(\"Coordinates in new basis:\", v_new)\n",
+    "\n",
+    "v_new = np.linalg.solve(P, v)\n",
+    "print(\"Coordinates in new basis:\", v_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d47a7c41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A + B =\n",
+      " [[ 6  8]\n",
+      " [10 12]]\n",
+      "2 * A =\n",
+      " [[2 4]\n",
+      " [6 8]]\n",
+      "A @ B =\n",
+      " [[19 22]\n",
+      " [43 50]]\n",
+      "Transpose of A =\n",
+      " [[1 3]\n",
+      " [2 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define two matrices\n",
+    "A = np.array([[1, 2],\n",
+    "              [3, 4]])\n",
+    "\n",
+    "B = np.array([[5, 6],\n",
+    "              [7, 8]])\n",
+    "\n",
+    "# Addition\n",
+    "print(\"A + B =\\n\", A + B)\n",
+    "\n",
+    "# Scalar multiplication\n",
+    "print(\"2 * A =\\n\", 2 * A)\n",
+    "\n",
+    "# Matrix multiplication\n",
+    "print(\"A @ B =\\n\", A @ B)\n",
+    "\n",
+    "# Transpose\n",
+    "print(\"Transpose of A =\\n\", A.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4e05a77d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Identity matrix:\n",
+      " [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "Diagonal matrix:\n",
+      " [[2 0 0]\n",
+      " [0 5 0]\n",
+      " [0 0 7]]\n",
+      "Upper triangular:\n",
+      " [[1 2 3]\n",
+      " [0 4 5]\n",
+      " [0 0 6]]\n",
+      "Is A symmetric? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identity matrix\n",
+    "I = np.eye(3)\n",
+    "print(\"Identity matrix:\\n\", I)\n",
+    "\n",
+    "# Diagonal matrix\n",
+    "D = np.diag([2, 5, 7])\n",
+    "print(\"Diagonal matrix:\\n\", D)\n",
+    "\n",
+    "# Upper triangular matrix\n",
+    "U = np.array([[1, 2, 3],\n",
+    "              [0, 4, 5],\n",
+    "              [0, 0, 6]])\n",
+    "print(\"Upper triangular:\\n\", U)\n",
+    "\n",
+    "# Check if symmetric\n",
+    "A = np.array([[1, 2],\n",
+    "              [2, 1]])\n",
+    "print(\"Is A symmetric?\", np.allclose(A, A.T))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a16a14af",
    "metadata": {},
    "outputs": [],
    "source": []
