Refactor practice and rough notebooks: update problems, add solutions, and enhance clarity
- Updated problem statements and solutions in practice.ipynb for better understanding.
- Added detailed outputs for linear algebra operations including determinants, inverses, and eigenvalues.
- Enhanced rough.ipynb with structured sections for imports, matrix operations, and examples.
- Included additional comments and markdown explanations for clarity.

--- a/Lab/session2/practice.ipynb
+++ b/Lab/session2/practice.ipynb
@@ -2,206 +2,460 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1a1ceda8",
+   "id": "93e87da5",
    "metadata": {},
    "source": [
     "# Session 2 — Practice Notebook\n",
+    "**Linear Transformations & Matrices**\n",
     "\n",
-    "**Topic:** Linear Transformations (Session 2)\n",
+    "This notebook contains short problems (from the Session 2 READMEs). Each problem is followed by a code cell (reproducible) and an **Answer** cell that shows the computed result.\n",
     "\n",
-    "This notebook contains the **Do It Yourself** exercises extracted from the session READMEs. Fill in the code cells below to solve each exercise. Keep answers below each prompt.\n",
-    "\n",
-    "---"
+    "---\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "de5e6dcb",
+   "id": "f4e1c1d7",
    "metadata": {},
    "source": [
-    "## 1) Determinant (2×2 and 3×3)\n",
-    "Compute the determinant of the following matrices and print results using NumPy:\n",
+    "## Problem 1\n",
+    "Represent and solve the system in matrix form:\n",
     "\n",
-    "- A = [[1,2],[3,4]]\n",
-    "- B = [[2,0,1],[-1,3,2],[3,1,0]]\n"
+    "$$\\begin{cases} x + y + z = 6 \\\\ 2y + 5z = -4 \\\\ 2x + 5y - z = 27 \\end{cases}$$\n",
+    "\n",
+    "Solve for $(x,y,z)$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f49651d9",
+   "execution_count": 17,
+   "id": "047b50ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution [x, y, z] = [ 5.  3. -2.]\n"
+     ]
+    }
+   ],
    "source": [
+    "# Problem 1 — solve system\n",
     "import numpy as np\n",
-    "A = np.array([[1,2],[3,4]])\n",
-    "B = np.array([[2,0,1],[-1,3,2],[3,1,0]])\n",
-    "print('det(A)=', np.linalg.det(A))\n",
-    "print('det(B)=', np.linalg.det(B))"
+    "A = np.array([[1,1,1],[0,2,5],[2,5,-1]], dtype=float)\n",
+    "b = np.array([6, -4, 27], dtype=float)\n",
+    "sol = np.linalg.solve(A, b)\n",
+    "print('Solution [x, y, z] =', sol)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "60ef1995",
+   "id": "a4cab47b",
    "metadata": {},
    "source": [
-    "## 2) Matrix Inverse (2×2)\n",
-    "Compute inverse of [[4,7],[2,6]] and verify that A @ A_inv = I."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9c246cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.array([[4,7],[2,6]])\n",
-    "A_inv = np.linalg.inv(A)\n",
-    "print('A_inv:\\n', A_inv)\n",
-    "print('\\nCheck A @ A_inv:\\n', A @ A_inv)"
+    "**Answer (computed):** `[5.0, 3.0, -2.0]`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b9dfa32",
+   "id": "784afd85",
    "metadata": {},
    "source": [
-    "## 3) Special matrices: Diagonal and Orthogonal\n",
-    "- Create a diagonal matrix D = diag([1,2,3,4]) and compute its inverse and determinant.\n",
-    "- Create a 2×2 rotation matrix for θ=90° and verify Q^T @ Q = I."
+    "## Problem 2\n",
+    "Create a 4×4 random matrix using NumPy and compute its transpose. Show shapes as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9107363d",
+   "execution_count": 18,
+   "id": "162b5fd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:\n",
+      " [[0.5488135  0.71518937 0.60276338 0.54488318]\n",
+      " [0.4236548  0.64589411 0.43758721 0.891773  ]\n",
+      " [0.96366276 0.38344152 0.79172504 0.52889492]\n",
+      " [0.56804456 0.92559664 0.07103606 0.0871293 ]]\n",
+      "\n",
+      "A.T:\n",
+      " [[0.5488135  0.4236548  0.96366276 0.56804456]\n",
+      " [0.71518937 0.64589411 0.38344152 0.92559664]\n",
+      " [0.60276338 0.43758721 0.79172504 0.07103606]\n",
+      " [0.54488318 0.891773   0.52889492 0.0871293 ]]\n",
+      "\n",
+      "Shapes: (4, 4) (4, 4)\n"
+     ]
+    }
+   ],
    "source": [
-    "D = np.diag([1,2,3,4])\n",
-    "print('D:\\n', D)\n",
-    "print('\\ndet(D)=', np.linalg.det(D))\n",
-    "print('\\nD_inv:\\n', np.linalg.inv(D))\n",
+    "# Problem 2 — 4x4 random matrix and transpose\n",
+    "import numpy as np\n",
+    "np.random.seed(0)\n",
+    "A = np.random.rand(4,4)\n",
+    "print('A:\\n', A)\n",
+    "print('\\nA.T:\\n', A.T)\n",
+    "print('\\nShapes:', A.shape, A.T.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b76df5be",
+   "metadata": {},
+   "source": [
+    "**Answer (sample matrix and its transpose shown in the code cell above).**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4af0034d",
+   "metadata": {},
+   "source": [
+    "## Problem 3\n",
+    "Given vectors:\n",
     "\n",
-    "# Rotation 90 degrees\n",
-    "theta = np.pi/2\n",
-    "Q = np.array([[np.cos(theta), -np.sin(theta)], [np.sin(theta), np.cos(theta)]])\n",
-    "print('\\nQ:\\n', Q)\n",
-    "print('\\nQ^T @ Q:\\n', Q.T @ Q)\n",
-    "print('\\nIs Q orthogonal? ->', np.allclose(Q.T @ Q, np.eye(2)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6bd790be",
-   "metadata": {},
-   "source": [
-    "## 4) Gram–Schmidt (implement columns orthonormalization)\n",
-    "Given matrix A below, orthonormalize its columns using Gram–Schmidt and verify Q^T @ Q = I."
+    "```\n",
+    "v1 = [2,3,1]\n",
+    "v2 = [4,6,2]\n",
+    "v3 = [1,0,1]\n",
+    "```\n",
+    "\n",
+    "Check if they are linearly independent (use determinant and rank)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e72275ac",
+   "execution_count": 19,
+   "id": "d8bf9a39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix M (rows = vectors):\n",
+      " [[2 3 1]\n",
+      " [4 6 2]\n",
+      " [1 0 1]]\n",
+      "\n",
+      "det(M)= 0.0\n",
+      "rank(M)= 2\n"
+     ]
+    }
+   ],
    "source": [
+    "# Problem 3 — determinant and rank\n",
+    "import numpy as np\n",
+    "v1 = np.array([2,3,1])\n",
+    "v2 = np.array([4,6,2])\n",
+    "v3 = np.array([1,0,1])\n",
+    "M = np.vstack([v1, v2, v3])\n",
+    "print('Matrix M (rows = vectors):\\n', M)\n",
+    "print('\\ndet(M)=', np.linalg.det(M))\n",
+    "print('rank(M)=', np.linalg.matrix_rank(M))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3206cd5",
+   "metadata": {},
+   "source": [
+    "**Answer (computed):** determinant = `0.0`, rank = `2` — therefore the vectors are linearly dependent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bebf317",
+   "metadata": {},
+   "source": [
+    "## Problem 4\n",
+    "Create a random 3×3 matrix and check if it is orthogonal by verifying $A^T A = I$. (Show result of the check.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9f119531",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A:\n",
+      " [[0.0202184  0.83261985 0.77815675]\n",
+      " [0.87001215 0.97861834 0.79915856]\n",
+      " [0.46147936 0.78052918 0.11827443]]\n",
+      "\n",
+      "A^T A:\n",
+      " [[0.97029312 1.22844219 0.76559195]\n",
+      " [1.22844219 2.26017546 1.52229662]\n",
+      " [0.76559195 1.52229662 1.25817118]]\n",
+      "\n",
+      "Is A orthogonal? -> False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Problem 4 — orthogonality check\n",
+    "import numpy as np\n",
+    "A = np.random.rand(3,3)\n",
+    "ATA = A.T @ A\n",
+    "print('A:\\n', A)\n",
+    "print('\\nA^T A:\\n', ATA)\n",
+    "print('\\nIs A orthogonal? ->', np.allclose(ATA, np.eye(3)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a4cfa05",
+   "metadata": {},
+   "source": [
+    "**Answer (computed sample):** `np.allclose(A^T A, I)` = `False`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4ad06cb",
+   "metadata": {},
+   "source": [
+    "## Problem 5\n",
+    "Apply Gram–Schmidt to orthonormalize columns of the matrix:\n",
+    "\n",
+    "```\n",
+    "G = [[2,2,4],[0,3,5],[0,4,5]]\n",
+    "```\n",
+    "Verify that Q^T Q ≈ I."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1e57d8de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q:\n",
+      " [[ 1.   0.   0. ]\n",
+      " [ 0.   0.6  0.8]\n",
+      " [ 0.   0.8 -0.6]]\n",
+      "\n",
+      "Q^T Q:\n",
+      " [[ 1.  0.  0.]\n",
+      " [ 0.  1. -0.]\n",
+      " [ 0. -0.  1.]]\n",
+      "\n",
+      "Is Q orthonormal? -> True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Problem 5 — Gram-Schmidt\n",
+    "import numpy as np\n",
+    "G = np.array([[2.0,2.0,4.0],[0.0,3.0,5.0],[0.0,4.0,5.0]])\n",
+    "# Gram-Schmidt function\n",
+    "\n",
     "def gram_schmidt_cols(A):\n",
     "    A = A.astype(float)\n",
-    "    m,n = A.shape\n",
-    "    Q = np.zeros((m,n))\n",
+    "    m, n = A.shape\n",
+    "    Q = np.zeros((m, n))\n",
     "    for j in range(n):\n",
-    "        v = A[:,j].copy()\n",
+    "        v = A[:, j].copy()\n",
     "        for i in range(j):\n",
-    "            proj = np.dot(Q[:,i], A[:,j]) * Q[:,i]\n",
+    "            proj = np.dot(Q[:, i], A[:, j]) * Q[:, i]\n",
     "            v = v - proj\n",
     "        norm = np.linalg.norm(v)\n",
     "        if norm < 1e-12:\n",
-    "            Q[:,j] = v\n",
+    "            Q[:, j] = v\n",
     "        else:\n",
-    "            Q[:,j] = v / norm\n",
+    "            Q[:, j] = v / norm\n",
     "    return Q\n",
     "\n",
-    "A = np.array([[2,2,4],[0,3,5],[0,4,5]], dtype=float)\n",
-    "Q = gram_schmidt_cols(A)\n",
+    "Q = gram_schmidt_cols(G)\n",
     "print('Q:\\n', Q)\n",
-    "print('\\nQ^T @ Q:\\n', np.round(Q.T @ Q, 6))\n",
-    "print('Is orthonormal? ->', np.allclose(Q.T @ Q, np.eye(Q.shape[1])))"
+    "print('\\nQ^T Q:\\n', np.round(Q.T @ Q, 6))\n",
+    "print('\\nIs Q orthonormal? ->', np.allclose(Q.T @ Q, np.eye(Q.shape[1])))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0fe5db03",
+   "id": "54f9c53d",
    "metadata": {},
    "source": [
-    "## 5) Eigenvalues and Eigenvectors\n",
+    "**Answer (computed):** Q^T Q ≈\n",
+    "```\n",
+    "[[ 1.  0.  0.]\n",
+    " [ 0.  1. -0.]\n",
+    " [ 0. -0.  1.]]\n",
+    "```\n",
+    "Is orthonormal? `True`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5ab4b19",
+   "metadata": {},
+   "source": [
+    "## Problem 6\n",
     "Compute eigenvalues and eigenvectors for A = [[2,1],[1,1]] and verify A v = λ v for one eigenpair."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cb835caf",
+   "execution_count": 22,
+   "id": "0a3cc2a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eigvals= [2.61803399 0.38196601]\n",
+      "eigvecs=\n",
+      " [[ 0.85065081 -0.52573111]\n",
+      " [ 0.52573111  0.85065081]]\n",
+      "\n",
+      "A v = [2.22703273 1.37638192]\n",
+      "l v = [2.22703273 1.37638192]\n",
+      "\n",
+      "Residual (A v - l v) = [0.00000000e+00 2.22044605e-16]\n"
+     ]
+    }
+   ],
    "source": [
-    "A = np.array([[2,1],[1,1]])\n",
+    "# Problem 6 — eigenvalues/eigenvectors\n",
+    "import numpy as np\n",
+    "A = np.array([[2,1],[1,1]], dtype=float)\n",
     "eigvals, eigvecs = np.linalg.eig(A)\n",
-    "print('eigvals:', eigvals)\n",
-    "print('eigvecs:\\n', eigvecs)\n",
-    "# Verify for first eigenpair\n",
+    "print('eigvals=', eigvals)\n",
+    "print('eigvecs=\\n', eigvecs)\n",
+    "# verify for first eigenpair\n",
     "v = eigvecs[:,0]\n",
     "l = eigvals[0]\n",
-    "print('\\nCheck A v and l v:\\n', A @ v, l * v)"
+    "print('\\nA v =', A @ v)\n",
+    "print('l v =', l * v)\n",
+    "print('\\nResidual (A v - l v) =', A @ v - l * v)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d7b0e859",
+   "id": "2159fb8c",
    "metadata": {},
    "source": [
-    "## 6) Diagonalization and A^k\n",
-    "Diagonalize A (if possible) as A = E D E^{-1} and compute A^5 using diagonalization."
+    "**Answer (computed):** eigenvalues = `[2.618033988749895, 0.3819660112501052]`, eigenvectors =\n",
+    "```\n",
+    "[[ 0.85065081 -0.52573111]\n",
+    " [ 0.52573111  0.85065081]]\n",
+    "```\n",
+    "Residual for first eigenpair ≈ `[0.00000000e+00 2.22044605e-16]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "435b935b",
+   "metadata": {},
+   "source": [
+    "## Problem 7\n",
+    "Diagonalize A and compute A^5 using diagonalization (reuse A from Problem 6)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f71ac57c",
+   "execution_count": 23,
+   "id": "de0ea2cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A^5 =\n",
+      " [[89. 55.]\n",
+      " [55. 34.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "A = np.array([[2,1],[1,1]])\n",
+    "# Problem 7 — diagonalization and A^5\n",
+    "import numpy as np\n",
+    "A = np.array([[2,1],[1,1]], dtype=float)\n",
     "vals, vecs = np.linalg.eig(A)\n",
-    "D = np.diag(vals)\n",
-    "E = vecs\n",
-    "E_inv = np.linalg.inv(E)\n",
-    "A_recon = E @ D @ E_inv\n",
-    "print('A_reconstructed:\\n', np.round(A_recon,6))\n",
-    "# A^5\n",
     "D5 = np.diag(vals**5)\n",
-    "A5 = E @ D5 @ E_inv\n",
-    "print('\\nA^5:\\n', np.round(A5,6))"
+    "A5 = vecs @ D5 @ np.linalg.inv(vecs)\n",
+    "print('A^5 =\\n', np.round(A5,6))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ba5ad92f",
+   "id": "2a641f27",
    "metadata": {},
    "source": [
-    "## 7) Python Implementation hints\n",
-    "- Use numpy.linalg for det, inv, eig, svd.\n",
-    "- Remember to check determinants before inverse.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Submit your solutions in the code cells above. Good luck!"
+    "**Answer (computed A^5):**\n",
+    "```\n",
+    "[[89. 55.]\n",
+    " [55. 34.]]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd1805ac",
+   "metadata": {},
+   "source": [
+    "## Problem 8\n",
+    "Construct a 2D rotation matrix for 90° and show why floating point gives tiny nonzero values for cos(π/2)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5c01c29a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R =\n",
+      " [[ 6.123234e-17 -1.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17]]\n",
+      "\n",
+      "Rounded R =\n",
+      " [[ 0. -1.]\n",
+      " [ 1.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Problem 8 — rotation matrix 90 degrees\n",
+    "import numpy as np\n",
+    "theta = np.pi/2\n",
+    "R = np.array([[np.cos(theta), -np.sin(theta)],[np.sin(theta), np.cos(theta)]])\n",
+    "print('R =\\n', R)\n",
+    "print('\\nRounded R =\\n', np.round(R,6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50369fe9",
+   "metadata": {},
+   "source": [
+    "**Answer (computed):** Floating point leads to tiny nonzero values; rounding gives the exact integer-looking matrix for 90° rotation."
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
